# Hashtagstech

./: .env.example  .env.local.example  .eslintrc.json  .gitignore  .prettierignore  README.md  next.config.mjs  package.json  sanity.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.claude/: settings.local.json
.claude/agents/: chatkit-integrator.md  content-writer.md  deployment-engineer.md  nextjs-frontend-architect.md  openai-agents-sdk-specialist.md
.claude/skills/: CLAUDE.md
.claude/skills/openai-chatkit-integration/assets/backend/: pyproject.toml  server.py
.claude/skills/openai-chatkit-integration/assets/backend/scripts/: ingest.py  rag_utils.py
.specify/memory/: constitution.md
app/: _document.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
app/(marketing)/: layout.tsx  page.tsx
components/animations/: scroll-reveal.tsx
components/blog/: blog-card.tsx  portable-text.tsx
components/career/: job-share-button.tsx
data/: ai-services.ts  blog-posts.ts  careers.ts  global-partners.ts  partners.ts  services.ts  stats.ts  testimonials.ts
docs/: SANITY_WEBHOOK_SETUP.md
hooks/: use-counter-animation.ts  use-reduced-motion.ts
lib/: animations.ts  brevo.ts  spam-filter.ts  utils.ts
module_prompts/: hashtag-tech-website-redesign.md  project-constitution.md
sanity/: config.ts  env.ts
sanity/lib/: client.ts  (+2 more)
scratch/: check-settings.js
types/: ai-service.ts  author.ts  blog.ts  career.ts  category.ts  chat-widget.ts  contact-form.ts  partner.ts  service.ts  stats.ts  testimonial.ts
(+192 files in other folders)
